5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1822_1640.log
== SUBMITION (2019-06-13 10:30:03) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))

a = 0

x = zeros(n)

for i in range(n):
	
-- EXECUTION TIME:
0.715801
-- ERROR:
  File "/home/codebench/codes/1822/1640/main.py", line 11
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:36:24) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))

a = 0

x = zeros(n)

for i in range(5):
	
for x in range(6):
	
-- ERROR:
File "XXXX", line 11
    for x in range(6):
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:36:44) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))

a = 0

x = zeros(n)

for i in range(5):	
-- ERROR:
File "XXXX", line 10
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:36:51) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))

a = 0

x = zeros(n)

for i in range(5):
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:37:03) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))

a = 0

x = zeros(v)

for i in range(5):
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:37:40) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))

a = 0

x = zeros(v)

for i in range(5):
	print(i)
	
for x in range(6);
	print(X)
-- ERROR:
File "XXXX", line 12
    for x in range(6);
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:37:45) 
-- CODE:
from numpy import *

v = array(eval(input("Digite: ")))

a = 0

x = zeros(v)

for i in range(5):
	print(i)
	
for m in range(6);
	print(X)
-- ERROR:
File "XXXX", line 12
    for m in range(6);
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
